2011-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.tcl: Extended package with STARTTLS support provided by
	* pop3.man: Pascal Scheffers. This switches a regular connection
	* pkgIndex.tcl: over to SSL/TLS. Version bumped to 1.8.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* pop3.test: Moved the dialog setup for test pop3-7.0 into the
	  test, to ensure that it is not run if TLS is not available.

2009-04-13  Andreas Kupries  <andreask@activestate.com>

	* pop3.tcl (::pop3::open): Extended to accept a new option
	* pop3.man: -socketcmd, through which the user can override the
	* pop3.test: way the connection is opened. Primary use is securing
	* pkgIndex.tcl: of the connection via SSL (package tls, command
	  tls::socket). Updated documentation. Extended testsuite. Bumped
	  package version to 1.7.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-08  Andreas Kupries  <andreask@activestate.com>

	* pop3.test: And snit is loaded by coserv.tcl too, no explicit
	  load required.

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* pop3.test: Updated to new snit dependency in comm.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Made pop3-0.5 more robust, accept more than just