@@ -8,7 +8,7 @@
 # Copyright (c) 2002-2006 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: pop3.test,v 1.27 2009/09/28 20:44:17 andreas_kupries Exp $
+# RCS: @(#) $Id: pop3.test,v 1.28 2011/01/25 02:23:30 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -293,7 +293,7 @@ test pop3-0.8 {open pop3 channel} {
     # the prescribed api command.
     lappend msg [peek $psock]
     set msg
-} {sock {limit 11 msex 0 retr_mode retr socketcmd ::socket}}
+} {sock {limit 11 msex 0 retr_mode retr socketcmd ::socket stls 0 tls-callback {}}}
 
 test pop3-0.9 {outside close} {
     dialog::dialog_set loginStatusOk
@@ -343,7 +343,7 @@ test pop3-1.2 {status ok} {
     pop3::close $psock
     dialog::waitdone
     set status
-} {11 176 {limit 11 msex 0 retr_mode retr socketcmd ::socket}}
+} {11 176 {limit 11 msex 0 retr_mode retr socketcmd ::socket stls 0 tls-callback {}}}
 
 # ----------------------------------------------------------------------
 # ----------------------------------------------------------------------
